# Game-Tek-Standard-Library

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Game Tek Standard Library.sln  Game Tek Standard Library.sln.DotSettings  LICENSE  install.sh  meson.build
.github/workflows/: BuildAndTest.yml
AAL/: AAL.vcxproj  AAL.vcxproj.filters
AAL/AAL/: AudioCore.h  AudioDevice.h
AAL/AAL/Platform/Windows/: WindowsAudioDevice.h
AAL/src/: AudioCore.cpp  AudioDevice.cpp
AAL/src/Windows/: WindowsAudioDevice.cpp
GAL/: GAL.vcxproj  GAL.vcxproj.filters
GAL/GAL/: Bindings.h  Buffer.h  CommandBuffer.h  CommandList.h  ComputePipeline.h  Framebuffer.h  GraphicsPipeline.h  Image.h  Memory.h  Pipelines.h  Queue.h  RenderContext.h  RenderCore.h  RenderDevice.h  RenderMesh.h  RenderPass.h  RenderTarget.h  Synchronization.h  Texture.h  UniformBuffer.h
GAL/GAL/DX12/: DX12.h  DX12Bindings.h  DX12Buffer.h  DX12CommandBuffer.h  DX12Memory.h  DX12Pipeline.h  DX12Queue.h  DX12RenderContext.h  DX12RenderDevice.h  DX12Synchronization.h  DX12Texture.h
GAL/GAL/Vulkan/: Vulkan.h  VulkanAccelerationStructures.h  VulkanAsyncHostOperation.h  VulkanBase.h  VulkanBindings.h  VulkanBuffer.h  VulkanCommandBuffer.h  VulkanCommandList.h  VulkanFramebuffer.h  VulkanImage.h  VulkanMemory.h  VulkanPipelines.h  VulkanQueryPool.h  VulkanQueue.h  VulkanRenderContext.h  VulkanRenderDevice.h  VulkanRenderMesh.h  VulkanRenderPass.h  VulkanRenderTarget.h  VulkanSwapchainImage.h  VulkanSynchronization.h  VulkanTexture.h  VulkanUniformBuffer.h
GAL/src/: RenderDevice.cpp
GAL/src/DX12/: DX12Buffer.cpp  DX12CommandBuffer.cpp  DX12Memory.cpp  DX12Pipeline.cpp  DX12RenderContext.cpp  DX12RenderDevice.cpp  DX12Synchronization.cpp  DX12Texture.cpp
GAL/src/Vulkan/: VulkanAccelerationStructures.cpp  VulkanAsyncHostOperation.cpp  VulkanBindings.cpp  VulkanBuffer.cpp  VulkanCommandBuffer.cpp  VulkanFramebuffer.cpp  VulkanImage.cpp  VulkanMemory.cpp  VulkanPipelines.cpp  VulkanQueryPool.cpp  VulkanRenderContext.cpp  VulkanRenderDevice.cpp  VulkanRenderMesh.cpp  VulkanRenderPass.cpp  VulkanRenderTarget.cpp  VulkanSwapchainImage.cpp  VulkanSynchronization.cpp  VulkanTexture.cpp  VulkanUniformBuffer.cpp
GTSL/: Algorithm.h  Algorithm.hpp  Allocator.h  Allocator.hpp  AlphaBetaTree.hpp  Application.h  ArrayCommon.hpp  ArrayCommon.ifc  Assert.h  Atomic.hpp  BMP.h  BitTracker.h  Bitfield.h  Bitman.h  Bitman.hpp  BlockingQueue.h  Buffer.hpp  ConditionVariable.h  Console.h  Core.h  Core.hpp  DLL.h  DataSizes.h  DataSizes.hpp  DeferrableContainer.h  Delegate.hpp  Delegates.cpp  Delegates.hpp  Extent.h  FLags.hpp  File.h  File.hpp  Filesystem.h  Filesystem.hpp  FixedVector.h  FixedVector.hpp  Flags.h  Format.hpp  FunctionPointer.hpp  GTSL.vcxproj  (+44 more)
GTSL/Collections/: ArrayCommon.hpp  Buffer.hpp  Dictionary.hpp  HashMap.hpp  Pair.hpp  Range.hpp  Tuple.hpp  Vector.hpp
GTSL/GTSL/: Algorithm.h  Allocator.h  Application.h  Array.hpp  ArrayCommon.hpp  Assert.h  Atomic.hpp  BitTracker.h  Bitfield.h  Bitman.h  Bitscan.h  BlockingQueue.h  Buffer.h  Buffer.hpp  ConditionVariable.h  Console.h  Core.h  DLL.cpp  DLL.h  DataSizes.h  Delegate.h  Delegate.hpp  DynamicType.h  EasyEnum.h  Extent.h  FString.h  File.h  Filesystem.h  FixedVector.h  FixedVector.hpp  Flags.h  FlatHashMap.h  FlipFlop.h  FunctionPointer.hpp  GTSLString.h  Gamepad.h  GamepadQuery.h  HashMap.h  HashMap.hpp  HashedVector.h  (+37 more)
GTSL/GTSL/Math/: AxisAngle.h  Line.h  Math.hpp  Matrix4.h  Plane.h  Quaternion.h  Rotator.h  Transform2.h  Transform3.h  Vector2.h  Vector3.h  Vector4.h  Vectors.h
GTSL/GTSL/Network/: IPEndpoints.h  Ipv4Endpoint.h  NetConnection.h  NetworkCore.h  Sockets.h
GTSL/GTSL/Platform/Windows/: WindowsApplication.h  WindowsWindow.h
GTSL/GTSL/SIMD/: SIMD.h  SIMD.hpp  SIMD128.h  SIMD128.hpp  float32_4.h  uint32_16.h  uint64_2.h
GTSL/Math/: AxisAngle.h  AxisAngle.hpp  Collision.hpp  Collision.ixx  Extent.hpp  Frustum.h  Frustum.hpp  Line.h  Math.hpp  Matrix.hpp  Matrix4.h  Plane.h  Plane.hpp  Quaternion.h  Quaternion.hpp  Rotator.hpp  Vectors.h  Vectors.hpp
GTSL/Network/: IPEndpoints.h  NetConnection.h  Sockets.h  Sockets.hpp
GTSL/SIMD/: SIMD.hpp  SIMD128.hpp
GTSL/String/: ShortString.hpp  String.hpp  StringCommon.hpp
GTSL/src/: Allocator.cpp  Application.cpp  ArrayCommon.ixx  Bitman.cpp  Bitscan.cpp  Console.cpp  DLL.cpp  FString.cpp  File.cpp  Filesystem.cpp  Gamepad.cpp  GamepadQuery.cpp  Id.cpp  Memory.cpp  NetSocket.cpp  Sockets.cpp  Stream.cpp  String.cpp  StringCommon.cpp  System.cpp  Thread.cpp  Window.cpp
GTSL/src/Math/: AxisAngle.cpp  GTM.cpp  Math.cpp  Matrix4.cpp  Plane.cpp  Quaternion.cpp  Rotator.cpp  Vector3.cpp  Vector4.cpp  Vectors.cpp
GTSL/src/Platform/Windows/: WindowsApplication.cpp  WindowsWindow.cpp
bin-int/GTSL/Debug-x64/GTSL.tlog/: GTSL.lastbuildstate
src/: Memory.cpp
src/Math/: AxisAngle.cpp  Math.cpp  Matrix4.cpp  Plane.cpp
test/: Kodak Ektachrome 64.cube  TestAlgorithm.cpp  TestBuffer.cpp  TestCollision.cpp  TestFixedVector.cpp  TestHashMap.cpp  TestIndirectionTable.cpp  TestMain.cpp  TestMath.cpp  TestMemory.cpp  TestOS.cpp  TestParsers.cpp  TestRange.cpp  TestRatioUnit.cpp  TestShortString.cpp  TestSmartPointer.cpp  TestString.cpp  TestStringCommon.cpp  TestTree.cpp  TestUnicode.cpp  TestVector.cpp  TestVector.hpp  main.cpp
